<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FreqCap!</string>
    <string name="app_name">FreqCap</string>
    <string name="burst">Frequenz</string>
    <string name="timer">Timer</string>
    <string name="preferences">Einstellungen</string>
    
    <!-- KEYs for the preferences -->
    <string name="key_burstMode">burstMode</string>
    <string name="key_burstInfiniteNumber">burstInfiniteNumber</string>
    <string name="key_burstNumberValue">burstNumberValue</string>
    <string name="key_burstIntervalValue">burstIntervalValue</string>
    
    <string name="key_timerMode">timerMode</string>
    <string name="key_timerNumberValue">timerNumberValue</string>
    
    <string name="key_compressRate">compressRate</string>
    <string name="key_storageTarget">storageTarget</string>
        
    <string name="key_picQuali">pictureQuality</string>
    <string name="key_colorEffect">colorEffect</string>
    <string name="key_sceneMode">sceneMode</string>
    <string name="key_whiteBalance">whiteBalance</string>
    <string name="key_focusMode">focusMode</string>
</resources>
