<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="Burst/Timer">
		<CheckBoxPreference
			android:key="@string/key_burstMode"
			android:title="Burst Mode" />
		<PreferenceScreen
			android:key="key_burstPrefScreen"
			android:title="Burst settings"
			android:summary="Number of snapshots / Interval"
			android:dependency="@string/key_burstMode">
			<EditTextPreference
				android:key="@string/key_burstNumberValue"
				android:title="How many snapshots"
				android:dialogTitle="Burst"
				android:dialogMessage="How many snapshots?"
				android:positiveButtonText="Ok"
				android:negativeButtonText="Cancel" />
			<EditTextPreference
				android:key="@string/key_burstIntervalValue"
				android:title="Seconds between two pictures"
				android:dialogTitle="Burst"
				android:dialogMessage="Seconds between two pictures?"
				android:positiveButtonText="Ok"
				android:negativeButtonText="Cancel" />
		</PreferenceScreen>
		<CheckBoxPreference
			android:key="@string/key_timerMode"
			android:title="Timer Mode" />
		<EditTextPreference
			android:key="@string/key_timerNumberValue"
			android:dependency="@string/key_timerMode"
			android:title="Timer"
			android:dialogTitle="Timer"
			android:dialogMessage="Seconds until the first picture will be captured?"
			android:positiveButtonText="Ok"
			android:negativeButtonText="Cancel" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="prefCat_storage"
		android:title="Picture Settings">
		<EditTextPreference
			android:key="@string/key_compressRate"
			android:title="Compress rate of the pictures"
			android:dialogTitle="Compress rate"
			android:dialogMessage="0 meaning compress for small size, 100 meaning compress for max quality"
			android:positiveButtonText="Ok"
			android:negativeButtonText="Cancel" />
		<ListPreference
			android:title="Storage Target"
			android:key="@string/key_storageTarget"
			android:entries="@array/storageTarget"
			android:entryValues="@array/storageTargetValues" />
	</PreferenceCategory>
	<PreferenceCategory
		android:key="prefCat_camera"
		android:title="Camera">
		<ListPreference
			android:title="Picture Quality"
			android:key="@string/key_picQuali" />
		<ListPreference
			android:title="Color Effects"
			android:key="@string/key_colorEffect" />
		<ListPreference
			android:title="Focus Mode"
			android:key="@string/key_focusMode" />
		<ListPreference
			android:title="Scene Modes"
			android:key="@string/key_sceneMode" />
		<ListPreference
			android:title="White Balance"
			android:key="@string/key_whiteBalance" />

	</PreferenceCategory>
</PreferenceScreen>
